--- a/client/app.json
+++ b/client/app.json
@@ -29,7 +29,8 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "sdkVersion": "45.0.0"
+    "sdkVersion": "45.0.0",
+    "entryPoint": ".vscode\\exponentIndex.js"
   },
   "name": "client"
 }
