--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
     "expo": "~45.0.0",
+    "expo-cli": "^5.4.12",
     "expo-status-bar": "~1.3.0",
+    "metro": "^0.71.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native": "^0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-safe-area-context": "4.2.4",
+    "expo-updates": "~0.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
