--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "expo-cli": "^5.4.12",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.2",
+    "file-api": "^0.10.4",
     "metro": "^0.71.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "^0.68.2",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
