--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "express-validator": "^6.14.2",
     "moment": "^2.29.3",
     "mongoose": "^6.3.8",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.2",
     "save": "^2.5.0"
   },
