--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "underscore": "^1.13.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
