--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.2",
     "metro": "^0.71.2",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "^0.68.2",
+    "react-native-calendars": "^1.1285.0",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^4.12.2",
