--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "expo": "~45.0.0",
     "expo-cli": "^5.4.12",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.2",
+    "expo-updates": "~0.13.3",
     "metro": "^0.71.2",
     "moment": "^2.29.4",
     "react": "17.0.2",
@@ -29,6 +29,7 @@
     "react-native-paper": "^4.12.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
     "underscore": "^1.13.4"
