--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
-    "underscore": "^1.13.4"
+    "underscore": "^1.13.4",
+    "@react-native-community/datetimepicker": "6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
