--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
@@ -26,14 +27,14 @@
     "react-native-calendars": "^1.1285.0",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
-    "underscore": "^1.13.4",
-    "@react-native-community/datetimepicker": "6.1.2"
+    "underscore": "^1.13.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
