--- a/client/app.json
+++ b/client/app.json
@@ -1,9 +1,16 @@
 {
   "expo": {
-    "slug": "client",
-    "name": "client",
-    "sdkVersion": "45.0.0",
-    "entryPoint": ".vscode\\exponentIndex.js"
-  },
-  "name": "client"
+    "name": "Grow Well Garden Manager",
+    "icon": "./src/app/assets/images/logo.png",
+    "version": "1.0.0",
+    "slug": "GrowWell",
+    "ios": {
+      "bundleIdentifier": "com.GrowWell",
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "com.GrowWell",
+      "versionCode": 1
+    }
+  }
 }
