Linking Alarms to OS Notifications

--- a/client/app.json
+++ b/client/app.json
@@ -11,6 +11,18 @@
     "android": {
       "package": "com.GrowWell",
       "versionCode": 1
-    }
-  }
+    },
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./src/app/assets/images/logo.png",
+          "color": "#ffffff"
+        }
+      ]
+    ],
+    "sdkVersion": "45.0.0",
+    "entryPoint": ".vscode\\exponentIndex.js"
+  },
+  "name": "client"
 }
