--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mongoose": "^6.3.8",
     "multer": "^1.4.2",
