--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,13 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mongoose": "^6.3.8",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.7.7",
     "save": "^2.5.0"
   },
   "devDependencies": {
