Adding Images to Notes

--- a/client/app.json
+++ b/client/app.json
@@ -10,7 +10,10 @@
     },
     "android": {
       "package": "com.GrowWell",
-      "versionCode": 1
+      "versionCode": 1,
+      "permissions": [
+        "READ_EXTERNAL_STORAGE"
+      ]
     },
     "plugins": [
       [
@@ -18,6 +21,14 @@
         {
           "icon": "./src/app/assets/images/logo.png",
           "color": "#ffffff"
+        }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow Grow Well to access your photos.",
+          "savePhotosPermission": "Allow Grow Well to save photos.",
+          "isAccessMediaLocationEnabled": true
         }
       ]
     ],
