--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,12 @@
     "@react-navigation/stack": "^6.2.1",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-cameraroll": "^1.1.0",
     "expo-cli": "^5.4.12",
+    "expo-device": "~4.2.0",
+    "expo-file-system": "^14.1.0",
+    "expo-media-library": "~14.1.0",
+    "expo-notifications": "~0.15.4",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
     "metro": "^0.71.2",
@@ -34,9 +39,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
-    "underscore": "^1.13.4",
-    "expo-notifications": "~0.15.4",
-    "expo-device": "~4.2.0"
+    "underscore": "^1.13.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
