Correcting app.json for app build

--- a/client/app.json
+++ b/client/app.json
@@ -33,7 +33,7 @@
       ]
     ],
     "sdkVersion": "45.0.0",
-    "entryPoint": ".vscode\\exponentIndex.js"
+    "entryPoint": "./index.js"
   },
   "name": "client"
 }
