Prevent keyboard changing screen layout

--- a/client/app.json
+++ b/client/app.json
@@ -11,6 +11,7 @@
     "android": {
       "package": "com.GrowWell",
       "versionCode": 1,
+      "softwareKeyboardLayoutMode": "pan",
       "permissions": [
         "READ_EXTERNAL_STORAGE"
       ]
