--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.2",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-snap-carousel": "^3.9.1",
