--- a/client/.vscode/launch.json
+++ b/client/.vscode/launch.json
@@ -8,6 +8,18 @@
             "cwd": "${workspaceFolder}",
             "platform": "exponent",
             "expoHostType": "local"
+        },
+        {
+            "name": "Debug Jest Tests",
+            "type": "node",
+            "request": "launch",
+            "runtimeArgs": [
+                "--inspect-brk",
+                "${workspaceRoot}/node_modules/jest/bin/jest.js",
+                "--runInBand"
+            ],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen"
         }
     ]
 }
