--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,22 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFiles": [
+      "<rootDir>/test/JestSetup.js"
+    ],
+    "testEnvironment": "jsdom"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@types/jest": "^28.1.6",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-cameraroll": "^1.1.0",
@@ -24,6 +33,7 @@
     "expo-notifications": "~0.15.4",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
+    "jest-expo": "^46.0.1",
     "metro": "^0.71.2",
     "moment": "^2.29.4",
     "react": "17.0.2",
@@ -40,6 +50,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
+    "react-test-renderer": "^17.0.2",
     "underscore": "^1.13.4"
   },
   "devDependencies": {
