Modifying Jest SetUp

--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "setupFiles": [
       "<rootDir>/test/JestSetup.js"
     ],
+    "collectCoverage": true,
     "testEnvironment": "jsdom"
   },
   "dependencies": {
