--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,18 @@
 {
   "scripts": {
     "start": "node index",
-    "dev": "nodemon index"
+    "dev": "nodemon index",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/jest": "^28.1.7",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "generate-password": "^1.7.0",
+    "jest": "^28.1.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mongoose": "^6.3.8",
@@ -19,6 +22,12 @@
     "save": "^2.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.16",
+    "supertest": "^6.2.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "collectCoverage": true
   }
 }
